--- a/Página_Principal.html
+++ b/Página_Principal.html
@@ -54,7 +54,7 @@
         </div>
         <div class="opcion2">
             <h3>Apóyanos</h3>
-            <p>Sabemos que no puedes adoptar pero quieres ayudarnos, pensando en ti decidimos agregar esta opción en la cual podrás ayudar de manera económica a distintos albergues para que más perritos y gatitos puedan alimentarse, recibir tratamiento y tener mayor comodidad en la espera de una nueva familia.  
+            <p>Sabemos que no puedes adoptar pero quieres ayudarnos, pensando en tí decidimos agregar esta opción en la cual podrás ayudar de manera económica a distintos albergues para que más perritos y gatitos puedan alimentarse, recibir tratamiento y tener mayor comodidad mientras están a la espera de una nueva familia.  
             </p>
             <button>APÓYANOS</button> 
             <img src="Imágenes/apoyo.png" alt="">
