Cambio de correo
- Nombre de persona solicitando duda
- Correo de la persona

--- a/Correo Ejemplo/CorreoEjemplo.html
+++ b/Correo Ejemplo/CorreoEjemplo.html
@@ -10,13 +10,10 @@
 <body>
     <div class="Prototipo de correo">
         <h1>CONTÁCTANOS</h1>
-        <h2>Asunto:</h2>
-        <input type="text" id = "txtAsunto" name="txtAsunto" placeholder="Asunto">
-        <h2>Destinatario (GMAIL):</h2>
+        <h2>Nombre:</h2>
+        <input type="text" id = "txtPersona" name="txtPersona" placeholder="Asunto">
+        <h2>Correo (Gmail):</h2>
         <input type="text" id = "txtCorreo" name="txtCorreo" placeholder="Correo">
-        <h2>Mensaje:</h2>
-        <textarea id = "txtArMensaje" name = "txtArMensaje" rows = "6" cols = "50" maxlength = "300" placeholder = "Mensaje"></textarea>
-        <input type="text" id = "ctMensaje" name = "ctMensaje" value = "0/300" readonly>
         <button type="submit" name="btnEnviar" onclick = EnviarGmail()>Enviar</button>
     </div>
     <script src = "CorreoEjemplo.js"></script>
